# python-cloudpulseclient

./: .gitreview  CONTRIBUTING.rst  HACKING.rst  README.md  README.rst  openstack-common.conf  requirements.txt  setup.cfg  test-requirements.txt  tox.ini
cloudpulseclient/: __init__.py  exceptions.py  i18n.py  shell.py  version.py
cloudpulseclient/common/: base.py  httpclient.py  utils.py
cloudpulseclient/openstack/common/: _i18n.py  cliutils.py
cloudpulseclient/openstack/common/apiclient/: auth.py  base.py  client.py  exceptions.py  fake_client.py  utils.py
cloudpulseclient/tests/: test_cloudpulseclient.py
cloudpulseclient/v1/: client.py  cloudpulseservices.py  shell.py
doc/source/: conf.py  index.rst  installation.rst  usage.rst
