[metadata]
name = python-cloudpulseclient
summary = A Python language binding for OpenStack CloudPulse.
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4

[files]
packages =
    cloudpulseclient

[entry_points]
console_scripts =
    cloudpulse = cloudpulseclient.shell:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = cloudpulseclient/locale
domain = python-cloudpulseclient

[update_catalog]
domain = python-cloudpulseclient
output_dir = cloudpulseclient/locale
input_file = cloudpulseclient/locale/python-cloudpulseclient.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = cloudpulseclient/locale/python-cloudpulseclient.pot

[wheel]
universal = 1
